# axum-test

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/entities/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/api/: mod.rs
src/api/login/: mod.rs
src/sqlx_session_store/: mod.rs
webapi/: Cargo.toml
webapi/src/: main.rs
webapi/src/api/: mod.rs
webapi/src/api/login/: mod.rs
webapi/src/sql_session_store/: mod.rs
